add validations for email

--- a/index.html
+++ b/index.html
@@ -191,12 +191,18 @@
         </div>
         <div class="footer__form">
           <div class="form">
-            <input type="text" placeholder="Updates in your inbox… " />
-            <button>Go</button>
+            <div>
+              <input type="text" placeholder="Updates in your inbox… " />
+              <span class="span" id="spanAlert"
+                >Please Insert a valide email</span
+              >
+            </div>
+            <button onclick="Check()">Go</button>
           </div>
           <p>Copyright 2020. All Rights Reserved</p>
         </div>
       </div>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
