--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
           </ul>
         </div>
         <div class="menue__button">Get Started</div>
+        <img src="./images/icon-hamburger.svg" class="hamburger" alt="" />
       </div>
       <div class="app__content">
         <div class="content__chart">
