--- a/index.html
+++ b/index.html
@@ -175,20 +175,22 @@
             <i class="fa-brands fa-instagram"></i>
           </div>
         </div>
-        <div class="footer_menue">
-          <ul>
-            <li>Home</li>
-            <li>Pricing</li>
-            <li>Products</li>
-            <li>About Us</li>
-          </ul>
-        </div>
-        <div>
-          <ul>
-            <li>Careers</li>
-            <li>Community</li>
-            <li>Privacy Policy</li>
-          </ul>
+        <div class="mobile">
+          <div class="footer_menue">
+            <ul>
+              <li>Home</li>
+              <li>Pricing</li>
+              <li>Products</li>
+              <li>About Us</li>
+            </ul>
+          </div>
+          <div class="footer_menue">
+            <ul>
+              <li>Careers</li>
+              <li>Community</li>
+              <li>Privacy Policy</li>
+            </ul>
+          </div>
         </div>
         <div class="footer__form">
           <div class="form">
