add mobile navigations

--- a/index.html
+++ b/index.html
@@ -48,8 +48,27 @@
           </ul>
         </div>
         <div class="menue__button">Get Started</div>
-        <img src="./images/icon-hamburger.svg" class="hamburger" alt="" />
+        <img
+          src="./images/icon-hamburger.svg"
+          class="hamburger"
+          alt="photo__hamburgere"
+          onclick="Toggle()"
+        />
+        <img src="./images/icon-close.svg" onclick="hide()" class="close" />
       </div>
+
+      <div class="app__header__mobile">
+        <div class="header__mobile">
+          <ul class="mobile__list">
+            <li>Pricing</li>
+            <li>Product</li>
+            <li>About Us</li>
+            <li>Careers</li>
+            <li>Community</li>
+          </ul>
+        </div>
+      </div>
+
       <div class="app__content">
         <div class="content__chart">
           <div class="chart__text">
@@ -169,8 +188,8 @@
           <img src="./images/logo.svg" alt="" />
           <div class="icon">
             <i class="fa-brands fa-facebook-square"></i>
-            <i class="fa-brands fa-youtube-square"></i>
-            <i class="fa-brands fa-twitter-square"></i>
+            <i class="fa-brands fa-youtube"></i>
+            <i class="fa-brands fa-twitter"></i>
             <i class="fa-brands fa-pinterest"></i>
             <i class="fa-brands fa-instagram"></i>
           </div>
