--- a/index.html
+++ b/index.html
@@ -179,7 +179,10 @@
         </div>
 
         <div class="content__prefooter">
-          <h1>Simplify how your team works today.</h1>
+          <h1>
+            Simplify how<br />
+            your team works today.
+          </h1>
           <div class="prefooter__button">Get Started</div>
         </div>
       </div>
