styling the footer fr the mobile

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>Frontend Mentor | Manage landing page</title>
+    <title>Manage landing page</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
@@ -198,32 +198,31 @@
           </div>
         </div>
         <div class="mobile">
-          <div class="footer_menue">
-            <ul>
-              <li>Home</li>
-              <li>Pricing</li>
-              <li>Products</li>
-              <li>About Us</li>
-            </ul>
-          </div>
-          <div class="footer_menue">
-            <ul>
-              <li>Careers</li>
-              <li>Community</li>
-              <li>Privacy Policy</li>
-            </ul>
-          </div>
+          <ul>
+            <li>Home</li>
+            <li>Pricing</li>
+            <li>Products</li>
+            <li>About Us</li>
+          </ul>
+
+          <ul>
+            <li>Careers</li>
+            <li>Community</li>
+            <li>Privacy Policy</li>
+          </ul>
         </div>
-        <div class="footer__form">
-          <div class="form">
-            <div>
-              <input type="text" placeholder="Updates in your inbox… " />
-              <span class="span" id="spanAlert"
-                >Please Insert a valide email</span
-              >
-            </div>
-            <button onclick="Check()">Go</button>
+
+        <div class="form">
+          <div>
+            <input type="text" placeholder="Updates in your inbox… " />
+            <span class="span" id="spanAlert"
+              >Please Insert a valide email</span
+            >
           </div>
+          <button onclick="Check()">Go</button>
+        </div>
+
+        <div class="footer__copywrite">
           <p>Copyright 2020. All Rights Reserved</p>
         </div>
       </div>
