add background to the header in the mobile

--- a/index.html
+++ b/index.html
@@ -81,7 +81,10 @@
           </div>
 
           <div class="chart__img">
-            <img src="./images/illustration-intro.svg" />
+            <img
+              src="./images/illustration-intro.svg"
+              alt="photo__illustration"
+            />
           </div>
         </div>
 
