add copywrite for the desktop version

--- a/index.html
+++ b/index.html
@@ -215,14 +215,17 @@
           </ul>
         </div>
 
-        <div class="form">
-          <div>
-            <input type="text" placeholder="Updates in your inbox… " />
-            <span class="span" id="spanAlert"
-              >Please Insert a valide email</span
-            >
+        <div class="footer__form">
+          <div class="form">
+            <div>
+              <input type="text" placeholder="Updates in your inbox… " />
+              <span class="span" id="spanAlert"
+                >Please Insert a valide email</span
+              >
+            </div>
+            <button onclick="Check()">Go</button>
           </div>
-          <button onclick="Check()">Go</button>
+          <p>Copyright 2020. All Rights Reserved</p>
         </div>
 
         <div class="footer__copywrite">
