styling the hover button

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                 >Please Insert a valide email</span
               >
             </div>
-            <button onclick="Check()">Go</button>
+            <button onclick="Check()" class="submit">Go</button>
           </div>
           <p>Copyright 2020. All Rights Reserved</p>
         </div>
