correct the issues detected by the froentendmentor

--- a/index.html
+++ b/index.html
@@ -53,7 +53,12 @@
           alt="photo__hamburgere"
           onclick="Toggle()"
         />
-        <img src="./images/icon-close.svg" onclick="hide()" class="close" />
+        <img
+          src="./images/icon-close.svg"
+          onclick="hide()"
+          class="close"
+          alt="close__img"
+        />
       </div>
 
       <div class="app__header__mobile">
@@ -111,7 +116,6 @@
             </div>
             <div class="right__numbers">
               <div class="number">02</div>
-
               <div class="text">
                 <h4>Advanced built-in reports</h4>
                 <p>
@@ -180,7 +184,7 @@
       </div>
       <div class="app__footer">
         <div class="footer__icon">
-          <img src="./images/logo.svg" alt="" />
+          <img src="./images/logo.svg" alt="logo__img" />
           <div class="icon">
             <i class="fa-brands fa-facebook-square"></i>
             <i class="fa-brands fa-youtube"></i>
