add area landmarks

--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
     </style>
   </head>
   <body>
-    <div class="app">
-      <div class="app__header">
+    <div class="app" role="main">
+      <div class="app__header" role="navigation">
         <div class="header__logo">
           <img src="./images/logo.svg" />
         </div>
-        <div class="header__menue">
+        <div class="header__menue" role="navigation">
           <ul class="menue__list">
             <li>Pricing</li>
             <li>Product</li>
@@ -73,7 +73,7 @@
         </div>
       </div>
 
-      <div class="app__content">
+      <div class="app__content" role="contentinfo">
         <div class="content__chart">
           <div class="chart__text">
             <h1>Bring everyone together to build better products.</h1>
@@ -182,7 +182,7 @@
           <div class="prefooter__button">Get Started</div>
         </div>
       </div>
-      <div class="app__footer">
+      <div class="app__footer" role="footer">
         <div class="footer__icon">
           <img src="./images/logo.svg" alt="logo__img" />
           <div class="icon">
