correct some rules html

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </style>
   </head>
   <body>
-    <div class="app" role="main">
+    <div class="app">
       <div class="app__header" role="navigation">
         <div class="header__logo">
           <img src="./images/logo.svg" />
@@ -184,7 +184,7 @@
       </div>
       <div class="app__footer" role="footer">
         <div class="footer__icon">
-          <img src="./images/logo.svg" alt="logo__img" />
+          <img src="./images/logo.svg" alt="photo__logo" />
           <div class="icon">
             <i class="fa-brands fa-facebook-square"></i>
             <i class="fa-brands fa-youtube"></i>
