--- a/index.html
+++ b/index.html
@@ -84,12 +84,7 @@
             <div class="chart__button">Get Started</div>
           </div>
 
-          <div class="chart__img">
-            <img
-              src="./images/illustration-intro.svg"
-              alt="photo__illustration"
-            />
-          </div>
+          <div class="chart__img"></div>
         </div>
 
         <div class="content__about">
