add photo in the header version mobile

--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
             <div class="chart__button">Get Started</div>
           </div>
 
-          <div class="chart__img"></div>
+          <div class="chart__img">
+            <img src="./images/illustration-intro.svg" alt="">
+          </div>
         </div>
 
         <div class="content__about">
